Include #inhabitants into plots

--- a/src/analyze_EBI_metadata.ipynb
+++ b/src/analyze_EBI_metadata.ipynb
@@ -19,7 +19,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -50,7 +49,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -65,7 +63,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -81,7 +78,6 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -254,9 +250,7 @@
    "outputs": [],
    "source": [
     "df['keywords'].replace(['purposeofsampling:baselinesurveillance', 'puposeofsampling:baselinesurveillance', 'purpose_of_sequencing:baselinesurveillance', 'purposeofsampling=baselinesurveillance'], 'purpose_of_sampling:baseline_surveillance', inplace=True)\n",
-    "df['keywords'].replace(['purposeofsampling:targetedefforts', 'purposeofsampling=targetedefforts'], 'purpose_of_sampling:targeted_efforts', inplace=True)\n",
-    "df['keywords'].replace('purposeofsampling:targeted_sequencing', 'purpose_of_sampling:targeted_sequencing', inplace=True)\n",
-    "\n",
+    "df['keywords'].replace(['purposeofsampling:targetedefforts', 'purposeofsampling=targetedefforts', 'purpose_of_sampling:targeted_sequencing'], 'purpose_of_sampling:targeted_efforts', inplace=True)\n",
     "df['keywords'].value_counts()"
    ]
   },
@@ -402,7 +396,7 @@
     }
    },
    "source": [
-    "## Investigation of National Bias (Undercoverage)"
+    "## Investigation of National Bias"
    ]
   },
   {
@@ -410,8 +404,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    },
    "outputs": [],
@@ -432,7 +425,46 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv('../data/metadata_EBI_cleaned_and_enriched.csv', index=False)"
+    "df['country'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import numpy as np\n",
+    "\n",
+    "df['country'] = df['country'].replace(np.nan, 'Unknown')\n",
+    "\n",
+    "# Load number of inhabitants per country (taken from Wikipedia)\n",
+    "with open('country_inhabitants_map.json') as f:\n",
+    "    country_inhabitants_map = json.load(f)\n",
+    "\n",
+    "# Add new col with number of inhabitants\n",
+    "df['n_inhabitants'] = df['country'].map(country_inhabitants_map)\n",
+    "df['n_inhabitants'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.to_csv('../data/metadata_EBI_cleaned_and_enriched.csv', index=False)\n",
+    "\n",
+    "# TODO: execute profiling again"
    ]
   },
   {
@@ -449,7 +481,6 @@
     "threshold = 1000\n",
     "\n",
     "rare_countries = df[df['country'].map(df['country'].value_counts()) < threshold]\n",
-    "rare_countries = rare_countries[rare_countries['country'] != '']\n",
     "rare_countries['country'].value_counts()"
    ]
   },
@@ -480,21 +511,41 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "sns.set_style('whitegrid')\n",
+    "\n",
     "# Plot distribution of countries appearing more than 1,000 times\n",
     "for hue in ['dataclass', 'mol_type', 'keywords', 'gender']:\n",
-    "    fig, ax = plt.subplots(figsize=(18, 14))\n",
+    "    fig, ax = plt.subplots(figsize=(18, 16))\n",
     "    sns.countplot(data=popular_countries,\n",
     "                  x='country',\n",
     "                  hue=hue,\n",
     "                  order=popular_countries['country'].value_counts().index)\n",
     "\n",
-    "    fig.suptitle('Distribution of Countries with >= 1,000 Samples', fontsize=20)\n",
-    "    plt.xlabel('Country', fontsize=16)\n",
-    "    plt.ylabel('Count', fontsize=16)\n",
-    "    plt.setp(ax.xaxis.get_majorticklabels(), rotation=45)\n",
-    "    plt.legend(loc='upper right', title=f'{hue.capitalize()}:')\n",
+    "    fig.suptitle('Distribution of Countries with >= 1,000 Samples', fontsize=22)\n",
+    "    plt.xlabel('Country', fontsize=18)\n",
+    "    plt.ylabel('Count Normalized by Number of Inhabitants', fontsize=18)\n",
+    "    plt.xticks(fontsize=14, rotation=90)\n",
+    "    plt.yticks(fontsize=14)\n",
+    "    plt.legend(loc='upper right', title=f'{hue.capitalize()}:', fontsize=14)\n",
+    "    plt.rcParams['legend.title_fontsize'] = 14\n",
     "\n",
-    "    plt.savefig(f'../plots/popular_countries_count_by_{hue}.png')"
+    "    # Normalize height of bars with number of inhabitants\n",
+    "    max_y = 0\n",
+    "    n_countries = len(popular_countries['country'].unique())\n",
+    "    hue_index = 0\n",
+    "\n",
+    "    for i, patch in enumerate(ax.patches):\n",
+    "        if i % n_countries == 0 and i != 0:\n",
+    "            hue_index += 1\n",
+    "        country = ax.get_xticklabels()[i - (hue_index * n_countries)].get_text()\n",
+    "\n",
+    "        new_height = patch.get_height() / country_inhabitants_map[country]\n",
+    "        max_y = max(max_y, new_height)\n",
+    "        patch.set_height(new_height)\n",
+    "\n",
+    "    plt.gca().set_ylim([0, max_y + (max_y / 20)])\n",
+    "\n",
+    "    plt.savefig(f'../plots/general_country_counts/popular_countries_count_by_{hue}_normalized.png', dpi=300)"
    ]
   },
   {
@@ -515,13 +566,34 @@
     "                  hue=hue,\n",
     "                  order=rare_countries['country'].value_counts().index)\n",
     "\n",
-    "    fig.suptitle('Distribution of Countries with < 1,000 Samples', fontsize=20)\n",
-    "    plt.xlabel('Country', fontsize=16)\n",
-    "    plt.ylabel('Count', fontsize=16)\n",
-    "    plt.setp(ax.xaxis.get_majorticklabels(), rotation=90)\n",
-    "    plt.legend(loc='upper right', title=f'{hue.capitalize()}:')\n",
+    "    fig.suptitle('Distribution of Countries with < 1,000 Samples', fontsize=22)\n",
+    "    plt.xlabel('Country', fontsize=18)\n",
+    "    plt.ylabel('Count Normalized by Number of Inhabitants', fontsize=18)\n",
+    "    plt.xticks(fontsize=14, rotation=90)\n",
+    "    plt.yticks(fontsize=14)\n",
+    "    plt.legend(loc='upper right', title=f'{hue.capitalize()}:', fontsize=14)\n",
+    "    plt.rcParams['legend.title_fontsize'] = 14\n",
     "\n",
-    "    plt.savefig(f'../plots/rare_countries_count_by_{hue}.png')"
+    "    # Normalize height of bars with number of inhabitants\n",
+    "    max_y = 0\n",
+    "    n_countries = len(rare_countries['country'].unique())\n",
+    "    hue_index = 0\n",
+    "\n",
+    "    for i, patch in enumerate(ax.patches):\n",
+    "        if i % n_countries == 0 and i != 0:\n",
+    "            hue_index += 1\n",
+    "        country = ax.get_xticklabels()[i - (hue_index * n_countries)].get_text()\n",
+    "\n",
+    "        if country == 'Unknown':\n",
+    "            new_height = 0.0\n",
+    "        else:\n",
+    "            new_height = patch.get_height() / country_inhabitants_map[country]\n",
+    "\n",
+    "        max_y = max(max_y, new_height)\n",
+    "        patch.set_height(new_height)\n",
+    "    plt.gca().set_ylim([0, max_y + (max_y / 20)])\n",
+    "\n",
+    "    plt.savefig(f'../plots/general_country_counts/rare_countries_count_by_{hue}_normalized.png', dpi=300)"
    ]
   }
  ],
@@ -534,14 +606,14 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
