Add correlation of missing values and countries

--- a/src/analyze_EBI_metadata.ipynb
+++ b/src/analyze_EBI_metadata.ipynb
@@ -595,6 +595,100 @@
     "\n",
     "    plt.savefig(f'../plots/general_country_counts/rare_countries_count_by_{hue}_normalized.png', dpi=300)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Dependance on Missing Values to Countries/ Institutes"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df.isna().sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Get names of columns with missing values\n",
+    "cols_missing_vals = df.columns[df.isnull().any()]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Plot country distribution for each column with missing values\n",
+    "for col in cols_missing_vals:\n",
+    "    df_temp = df[df[col].isna()][[col, 'country']]\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(42, 22))\n",
+    "    sns.countplot(data=df_temp,\n",
+    "                  x='country',\n",
+    "                  palette=['blue'] * len(df_temp['country']),\n",
+    "                  order=df_temp['country'].value_counts().index)\n",
+    "\n",
+    "    fig.suptitle(f'Distribution of Countries for Rows with Missing Values in \"{col}\"', fontsize=22)\n",
+    "    plt.xlabel('Country', fontsize=18)\n",
+    "    plt.ylabel('Count Normalized by Number of Inhabitants', fontsize=18)\n",
+    "    plt.xticks(fontsize=14, rotation=90)\n",
+    "    plt.yticks(fontsize=14)\n",
+    "\n",
+    "    # Normalize height of bars with number of inhabitants\n",
+    "    for i, patch in enumerate(ax.patches):\n",
+    "        country = ax.get_xticklabels()[i].get_text()\n",
+    "        if country == 'Unknown':\n",
+    "            new_height = 0.0\n",
+    "        else:\n",
+    "            new_height = patch.get_height() / country_inhabitants_map[country]\n",
+    "\n",
+    "        max_y = max(max_y, new_height)\n",
+    "        patch.set_height(new_height)\n",
+    "    plt.gca().set_ylim([0, max_y + (max_y / 20)])\n",
+    "\n",
+    "    plt.savefig(f'../plots/missing_vals/country_count_of_missing_vals_in_{col}_normalized.png', dpi=300)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df['collected_by'].value_counts() # 385 unique entries -> cannot create above plots for this column (at least not out-of-the-box)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
