Add missing values overview per country

--- a/src/create_general_insights.ipynb
+++ b/src/create_general_insights.ipynb
@@ -9,7 +9,7 @@
     }
    },
    "source": [
-    "# EBI Metadata - Initial Insights"
+    "# EBI Metadata - General Insights"
    ]
   },
   {
@@ -247,6 +247,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "if not os.path.isdir('../plots/general_country_counts'):\n",
+    "    os.mkdir('../plots/general_country_counts')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "pycharm": {
@@ -292,7 +309,8 @@
     "\n",
     "    plt.gca().set_ylim([0, max_y + (max_y / 20)])\n",
     "\n",
-    "    plt.savefig(f'../plots/general_country_counts/popular_countries_count_by_{hue}_normalized.png', dpi=300)"
+    "    plt.savefig(f'../plots/general_country_counts/popular_countries_count_by_{hue}_normalized.png', dpi=300)\n",
+    "    plt.close()"
    ]
   },
   {
@@ -340,7 +358,8 @@
     "        patch.set_height(new_height)\n",
     "    plt.gca().set_ylim([0, max_y + (max_y / 20)])\n",
     "\n",
-    "    plt.savefig(f'../plots/general_country_counts/rare_countries_count_by_{hue}_normalized.png', dpi=300)"
+    "    plt.savefig(f'../plots/general_country_counts/rare_countries_count_by_{hue}_normalized.png', dpi=300)\n",
+    "    plt.close()"
    ]
   },
   {
@@ -527,7 +546,8 @@
     "        label.set_visible(False)\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('../plots/age_distribution.png', dpi=300)"
+    "plt.savefig('../plots/age_distribution.png', dpi=300)\n",
+    "plt.close()"
    ],
    "metadata": {
     "collapsed": false,
