Add region column

--- a/src/preprocess_metadata.ipynb
+++ b/src/preprocess_metadata.ipynb
@@ -612,6 +612,34 @@
    "execution_count": 12,
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Add region column\n",
+    "def get_region(country_and_region):\n",
+    "    if country_and_region.split(':', 1) != [country_and_region]:\n",
+    "        if country_and_region.split(':', 1)[1][0] == ' ':\n",
+    "            # Remove whitespace in front of region\n",
+    "            return country_and_region.split(':', 1)[1][1:]\n",
+    "        else:\n",
+    "            return country_and_region.split(':', 1)[1]\n",
+    "    else:\n",
+    "        # Insert NaN if only country is available in \"country_and_region\" column\n",
+    "        return np.nan\n",
+    "\n",
+    "df['region'] = df.apply(lambda row: get_region(str(row['country_and_region'])), axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [],
+   "source": [
     "# TODO: Derive race from \"host\" column and add as new column"
    ],
    "metadata": {
