--- a/src/create_general_insights.ipynb
+++ b/src/create_general_insights.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -22,7 +22,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 2520583 entries, 0 to 2520582\n",
-      "Data columns (total 33 columns):\n",
+      "Data columns (total 34 columns):\n",
       " #   Column                Dtype  \n",
       "---  ------                -----  \n",
       " 0   accession             object \n",
@@ -58,8 +58,9 @@
       " 30  age                   float64\n",
       " 31  country               object \n",
       " 32  n_inhabitants         float64\n",
-      "dtypes: bool(2), float64(2), int64(3), object(26)\n",
-      "memory usage: 601.0+ MB\n"
+      " 33  region                object \n",
+      "dtypes: bool(2), float64(2), int64(3), object(27)\n",
+      "memory usage: 620.2+ MB\n"
      ]
     }
    ],
@@ -821,6 +822,261 @@
     "# -> a bit more female samples are also quite realistic\n",
     "\n",
     "# -> russian ages are mostly between 63 and 83"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Investigation of USA States"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "df_usa = df[df['country'] == 'USA']"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "146392 USA samples removed, now there are 1110923 samples.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Filter for non-NaN regions\n",
+    "original_len_usa = len(df_usa)\n",
+    "df_usa = df_usa[df_usa['region'].notna()]\n",
+    "print(f'{original_len_usa - len(df_usa)} USA samples removed, now there are {len(df_usa)} samples.')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "California         133086\nFlorida             81698\nMinnesota           73512\nMassachusetts       62987\nTexas               59338\n                    ...  \nSC, McBee               1\nPA, Landenberg          1\nNJ, Clemson             1\nNC, Advance             1\nKansas, Johnson         1\nName: region, Length: 1504, dtype: int64"
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_usa['region'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1504"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_usa['region'].nunique()  # 1504 regions -> includes more than just USA states"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "51"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
+    "\n",
+    "with open('json_data/usa_states.json') as f:\n",
+    "    usa_states = json.load(f)\n",
+    "\n",
+    "# Note: \"District of Columbia (Washington, D.C.)\" does not belong to any state and therefore is listed additionally to 50 existing states\n",
+    "# See https://www.history.com/news/washington-dc-statehood-reconstruction :D\n",
+    "len(usa_states)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Manually fix typos in regions\n",
+    "df_usa['region'].replace(['Californi', 'District of Columbia', 'Masschusetts, Essex county', 'Ilinois, Chicago', 'NewYork', 'Middlesex county'],\n",
+    "                         ['California', 'District Of Columbia', 'Massachusetts', 'Illinois', 'New York', 'New Jersey'], inplace=True)\n",
+    "\n",
+    "def get_usa_states(region):\n",
+    "    # Get region by abbreviation\n",
+    "    if region.upper() in usa_states:\n",
+    "        return usa_states[region.upper()]\n",
+    "    # Get region by long version\n",
+    "    elif region.title() in list(usa_states.values()):\n",
+    "        return region.title()\n",
+    "    # Get region in front of comma\n",
+    "    elif region.split(',')[0].upper() in usa_states:\n",
+    "        return usa_states[region.split(',')[0].upper()]\n",
+    "    elif region.split(',')[0].title() in list(usa_states.values()):\n",
+    "        return region.split(',')[0].title()\n",
+    "    elif len(region.split(',')) >= 2:\n",
+    "        # Get region after first comma\n",
+    "        if region.split(',')[1].upper() in usa_states:\n",
+    "            return usa_states[region.split(',')[1].upper()]\n",
+    "        elif region.split(',')[1].title() in list(usa_states.values()):\n",
+    "            return region.split(',')[1].title()\n",
+    "        # Get region after first comma and whitespace\n",
+    "        elif region.split(',')[1][1:].upper() in usa_states:\n",
+    "            return usa_states[region.split(',')[1][1:].upper()]\n",
+    "        elif region.split(',')[1][1:].title() in list(usa_states.values()):\n",
+    "            return region.split(',')[1][1:].title()\n",
+    "    # Get region in front of slash and whitespace (catch special case \"Louisiana / New Orleans\")\n",
+    "    elif region.split('/')[0][:-1].title() in list(usa_states.values()):\n",
+    "        return region.split('/')[0][:-1].title()\n",
+    "    # Get region after whitespace (catch special case \"SLIDELL LA\")\n",
+    "    elif len(region.split(' ')) >= 2 and region.split(' ')[1].upper() in usa_states:\n",
+    "        return usa_states[region.split(' ')[1].upper()]\n",
+    "    else:\n",
+    "        return np.nan\n",
+    "\n",
+    "df_usa['usa_state'] = df_usa.apply(lambda row: get_usa_states(str(row['region'])), axis=1)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Puerto Rico                   1294\nPR                             419\nGU                             334\nMP                             142\nVI                              40\nUnknown                         32\nGuam                            15\nNG                              14\nVirgin Islands                   3\nVirgin Islands of the U.S.       3\nUNKNOWN                          3\nCB                               1\nNA, Santa Isabel                 1\nName: region, dtype: int64"
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check how many regions still contain more/less than state\n",
+    "unset_states = df_usa[df_usa['usa_state'].isna()]\n",
+    "unset_states['region'].value_counts() # -> 13 unique regions not assignable to state (islands, unknown, not existing abbreviations etc)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "California              162136\nFlorida                 101068\nMinnesota                74022\nTexas                    65383\nMassachusetts            63346\nWashington               35892\nNorth Carolina           35492\nGeorgia                  35039\nPennsylvania             33939\nColorado                 33524\nArizona                  29334\nNew Jersey               28532\nMichigan                 27324\nNew York                 26364\nIllinois                 25399\nTennessee                22262\nVirginia                 21983\nOhio                     19841\nMaryland                 18583\nWest Virginia            16749\nWisconsin                16491\nIndiana                  15930\nUtah                     15399\nNew Mexico               13578\nSouth Carolina           13464\nNevada                   12288\nMissouri                 11941\nAlabama                  11229\nOregon                    9964\nArkansas                  9091\nKentucky                  8866\nVermont                   8746\nRhode Island              8553\nConnecticut               8441\nLouisiana                 8306\nAlaska                    7273\nIdaho                     6127\nNew Hampshire             5943\nOklahoma                  5732\nKansas                    5001\nDistrict Of Columbia      4590\nMississippi               4103\nIowa                      3943\nNebraska                  3411\nMaine                     2802\nSouth Dakota              2675\nDelaware                  2399\nMontana                   2275\nWyoming                   1811\nHawaii                    1247\nNorth Dakota               791\nName: usa_state, dtype: int64"
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(df_usa['usa_state'].value_counts())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [],
+   "source": [
+    "df_usa.to_csv('../data/metadata_EBI_usa_states.csv', index=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# TODO: display amount of samples per state in relation to #inhabitants and #infections of resp. state"
    ],
    "metadata": {
     "collapsed": false,
