Add visualizations for sample counts of U.S. states

--- a/src/preprocess_metadata.ipynb
+++ b/src/preprocess_metadata.ipynb
@@ -365,7 +365,9 @@
     }
    },
    "source": [
-    "## Data Enrichment"
+    "## Data Enrichment\n",
+    "\n",
+    "### Gender"
    ]
   },
   {
@@ -387,7 +389,6 @@
     }
    ],
    "source": [
-    "# Add gender column\n",
     "df['host'].value_counts()"
    ]
   },
@@ -429,6 +430,7 @@
     }
    ],
    "source": [
+    "# Add gender column\n",
     "df['gender'] = df.apply(lambda row: get_gender(str(row['host'])), axis=1)\n",
     "df['gender'].value_counts()"
    ]
@@ -460,14 +462,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Age"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "execution_count": 1
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Manually fix typos in \"host\" column\n",
+    "df['host'] = df['host'].replace(['agee'], ['age'], regex=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
-    "# Add age column (measured in years)\n",
-    "df['host'] = df['host'].replace(['agee'], ['age'], regex=True)\n",
     "\n",
     "def get_age(host_value):\n",
     "    if 'age' in host_value.lower():\n",
@@ -514,14 +541,39 @@
     "        # example: \"42 year old\"\n",
     "        return host_value[(host_value.lower().find('year old') - 3): (host_value.lower().find('year old') - 1)]\n",
     "    else:\n",
-    "        return np.nan\n",
-    "\n",
+    "        return np.nan"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Add age column (measured in years)\n",
     "df['age'] = df.apply(lambda row: get_age(str(row['host'])), axis=1)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Country"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
@@ -539,7 +591,7 @@
     }
    ],
    "source": [
-    "# Add country column\n",
+    "# Extract country from \"country_and_region\" column\n",
     "df['country_and_region'] = df['country_and_region'].astype(str)\n",
     "df['country'] = [country_and_region.split(':')[0] for country_and_region in df['country_and_region']]\n",
     "df['country'].value_counts()"
@@ -575,6 +627,38 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Number of Inhabitants"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "df['country'] = df['country'].replace(np.nan, 'Unknown')\n",
+    "\n",
+    "# Load number of inhabitants per country (taken from Wikipedia)\n",
+    "with open('json_data/country_inhabitants.json') as f:\n",
+    "    country_inhabitants_map = json.load(f)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "outputs": [
@@ -588,14 +672,6 @@
     }
    ],
    "source": [
-    "import json\n",
-    "\n",
-    "df['country'] = df['country'].replace(np.nan, 'Unknown')\n",
-    "\n",
-    "# Load number of inhabitants per country (taken from Wikipedia)\n",
-    "with open('json_data/country_inhabitants_map.json') as f:\n",
-    "    country_inhabitants_map = json.load(f)\n",
-    "\n",
     "# Add column with number of inhabitants\n",
     "df['n_inhabitants'] = df['country'].map(country_inhabitants_map)\n",
     "df['n_inhabitants'].describe()"
@@ -608,13 +684,24 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Region"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "# Add region column\n",
     "def get_region(country_and_region):\n",
     "    if country_and_region.split(':', 1) != [country_and_region]:\n",
     "        if country_and_region.split(':', 1)[1][0] == ' ':\n",
@@ -626,6 +713,7 @@
     "        # Insert NaN if only country is available in \"country_and_region\" column\n",
     "        return np.nan\n",
     "\n",
+    "# Add region column\n",
     "df['region'] = df.apply(lambda row: get_region(str(row['country_and_region'])), axis=1)"
    ],
    "metadata": {
