Add plots with weekly #samples/#infections over time

--- a/src/analyze_us_states.ipynb
+++ b/src/analyze_us_states.ipynb
@@ -347,17 +347,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\ninai\\onedrive\\dokumente\\studium\\module\\master\\4. semester\\accountability in ai\\sampling bias\\sampling-bias-cov19\\venv\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3457: DtypeWarning: Columns (2,16,18,24) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -366,7 +357,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
@@ -376,7 +368,8 @@
    "outputs": [],
    "source": [
     "# Install GDAL wheel file (https://www.lfd.uci.edu/~gohlke/pythonlibs/#gdal) and Fiona wheel file (https://www.lfd.uci.edu/~gohlke/pythonlibs/#fiona) before installing geopandas\n",
-    "# Map plots needed from now on to know which states are near to each other\n",
+    "# Recommended: GDAL-3.3.3-cp37-cp37m-win_amd64.whl and Fiona-1.8.20-cp37-cp37m-win_amd64.whl\n",
+    "# Map plots needed from now on to show which states are near to each other\n",
     "import geopandas as gpd"
    ],
    "metadata": {
@@ -402,7 +395,8 @@
    ],
    "source": [
     "# Shapefile taken from https://alicia.data.socrata.com/Government/States-21basic/jhnu-yfrj\n",
-    "# .dbf, .prj and .shx file have to be in same folder\n",
+    "# .dbf, .prj and .\n",
+    "# shx file have to be in same folder\n",
     "usa_geo = gpd.read_file('../data/geo_usa_states.shp')\n",
     "usa_geo.head()"
    ],
@@ -784,7 +778,7 @@
    "source": [
     "# Taken from https://github.com/CSSEGISandData/COVID-19/blob/master/csse_covid_19_data/csse_covid_19_daily_reports_us/01-07-2022.csv\n",
     "# Documentation at https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data#field-description-1\n",
-    "usa_states_hopkins = pd.read_csv('../data/usa_states_john_hopkins.csv')\n",
+    "usa_states_hopkins = pd.read_csv('../data/JHU_usa_states.csv')\n",
     "usa_states_hopkins.info()"
    ],
    "metadata": {
