--- a/src/create_general_insights.ipynb
+++ b/src/create_general_insights.ipynb
@@ -971,7 +971,7 @@
    ],
    "source": [
     "# Keep weekly data and country\n",
-    "plotdata_infections = countries_ts.filter(regex='_Week$|Country/Region',axis=1)\n",
+    "plotdata_infections = countries_ts.filter(regex='_Week$|Country/Region', axis=1)\n",
     "# Remove suffix from date column names for interpretability on x-axis later on\n",
     "plotdata_infections.columns = plotdata_infections.columns.str.replace('_Week', '')\n",
     "\n",
@@ -1305,13 +1305,13 @@
     "sns.set_style('whitegrid')\n",
     "\n",
     "# Generate one line plot per country showing #samples/#infections week-wise over time\n",
-    "for country in ['USA']:\n",
+    "for country in countries_ts['Country/Region'].unique():\n",
     "    if country not in country_counts_prepared.columns: continue\n",
     "\n",
     "    fig, ax = plt.subplots(figsize=(24, 12))\n",
     "    plotdata[f'{country}_Ratio'].plot()\n",
     "\n",
-    "    fig.suptitle(f'Weekly Average of Sample Count of {country.capitalize()} - Scaled by Number of Infections', fontsize=22)\n",
+    "    fig.suptitle(f'Weekly Average of Sample Count of {country} - Scaled by Number of Infections', fontsize=22)\n",
     "    plt.xlabel('Start Date of Week', fontsize=18)\n",
     "    plt.ylabel('Scaled Count', fontsize=18)\n",
     "    plt.xticks(fontsize=14, rotation=90)\n",
@@ -1329,16 +1329,139 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "# TODO: Generate one line plot per country showing #samples/#infections week-wise over time BUT with #infections from week before"
+    "### Number of Samples in Relation to Number of Infections per Country: Shifted Week-wise over Time"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Country/Region           USA\n1/27/20         9.000000e+00\n2/3/20          1.228571e+01\n2/10/20         1.400000e+01\n2/17/20         1.571429e+01\n2/24/20         4.671429e+01\n...                      ...\n12/6/21         5.001919e+07\n12/13/21        5.099504e+07\n12/20/21        5.256303e+07\n12/27/21        5.571927e+07\n1/3/22                   NaN\n\n[102 rows x 1 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>Country/Region</th>\n      <th>USA</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1/27/20</th>\n      <td>9.000000e+00</td>\n    </tr>\n    <tr>\n      <th>2/3/20</th>\n      <td>1.228571e+01</td>\n    </tr>\n    <tr>\n      <th>2/10/20</th>\n      <td>1.400000e+01</td>\n    </tr>\n    <tr>\n      <th>2/17/20</th>\n      <td>1.571429e+01</td>\n    </tr>\n    <tr>\n      <th>2/24/20</th>\n      <td>4.671429e+01</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>12/6/21</th>\n      <td>5.001919e+07</td>\n    </tr>\n    <tr>\n      <th>12/13/21</th>\n      <td>5.099504e+07</td>\n    </tr>\n    <tr>\n      <th>12/20/21</th>\n      <td>5.256303e+07</td>\n    </tr>\n    <tr>\n      <th>12/27/21</th>\n      <td>5.571927e+07</td>\n    </tr>\n    <tr>\n      <th>1/3/22</th>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>102 rows × 1 columns</p>\n</div>"
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Shift number of infections one week \"to the front\"\n",
+    "cols_to_shift = plotdata.loc[:, ~plotdata.columns.str.endswith('_Ratio')]\n",
+    "\n",
+    "for col in cols_to_shift:\n",
+    "    plotdata[[col]] = plotdata[[col]].shift(periods=-1)\n",
+    "\n",
+    "plotdata[['USA']]  # -> infections numbers are shifted by one row from now on, reset \"plotdata\" with cells above if needed"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "# Add column for each country holding #samples/#infections ratio\n",
+    "for country in countries_ts['Country/Region'].unique():\n",
+    "    if country in country_counts_prepared.columns:\n",
+    "        plotdata[f'{country}_Ratio_Shifted'] = country_counts_prepared[[country]] / plotdata[[country]]\n",
+    "    else:\n",
+    "        plotdata[f'{country}_Ratio_Shifted'] = 0"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Country/Region  Afghanistan  Albania   Algeria   Andorra  Angola  \\\n1/27/20            0.000000      0.0  0.000000  0.000000     0.0   \n2/3/20             0.000000      0.0  0.000000  0.000000     0.0   \n2/10/20            0.000000      0.0  0.000000  0.000000     0.0   \n2/17/20            2.142857      0.0  0.285714  0.000000     0.0   \n2/24/20            5.000000      0.0  3.428571  0.428571     0.0   \n\nCountry/Region  Antigua and Barbuda  Argentina   Armenia    Austria  \\\n1/27/20                         0.0   0.000000  0.000000   0.000000   \n2/3/20                          0.0   0.000000  0.000000   0.000000   \n2/10/20                         0.0   0.000000  0.000000   0.000000   \n2/17/20                         0.0   0.000000  0.000000   0.571429   \n2/24/20                         0.0   0.285714  0.571429  13.857143   \n\nCountry/Region  Azerbaijan  ...  Zambia_Ratio_Shifted  Zimbabwe_Ratio_Shifted  \\\n1/27/20           0.000000  ...                   0.0                     0.0   \n2/3/20            0.000000  ...                   0.0                     0.0   \n2/10/20           0.000000  ...                   0.0                     0.0   \n2/17/20           0.000000  ...                   0.0                     0.0   \n2/24/20           1.714286  ...                   0.0                     0.0   \n\nCountry/Region  China_Ratio_Shifted  Canada_Ratio_Shifted  \\\n1/27/20                    0.000358              0.259259   \n2/3/20                     0.000180              0.148936   \n2/10/20                    0.000029              0.134615   \n2/17/20                    0.000013              0.101449   \n2/24/20                    0.000038              0.037433   \n\nCountry/Region  United Kingdom_Ratio_Shifted  France_Ratio_Shifted  \\\n1/27/20                             2.032258             14.175000   \n2/3/20                              0.700000              8.462687   \n2/10/20                             0.488372              6.914634   \n2/17/20                             0.035533              6.163043   \n2/24/20                             0.008495              0.558071   \n\nCountry/Region  Australia_Ratio_Shifted  Netherlands_Ratio_Shifted  \\\n1/27/20                        0.350000                   0.000000   \n2/3/20                         0.067308                   0.000000   \n2/10/20                        0.066667                   0.000000   \n2/17/20                        0.133333                   0.000000   \n2/24/20                        0.034483                   0.071429   \n\nCountry/Region  Denmark_Ratio_Shifted  New Zealand_Ratio_Shifted  \n1/27/20                      0.000000                      0.000  \n2/3/20                       0.000000                      0.000  \n2/10/20                      0.000000                      0.000  \n2/17/20                      0.000000                      0.000  \n2/24/20                      0.233333                      0.875  \n\n[5 rows x 588 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>Country/Region</th>\n      <th>Afghanistan</th>\n      <th>Albania</th>\n      <th>Algeria</th>\n      <th>Andorra</th>\n      <th>Angola</th>\n      <th>Antigua and Barbuda</th>\n      <th>Argentina</th>\n      <th>Armenia</th>\n      <th>Austria</th>\n      <th>Azerbaijan</th>\n      <th>...</th>\n      <th>Zambia_Ratio_Shifted</th>\n      <th>Zimbabwe_Ratio_Shifted</th>\n      <th>China_Ratio_Shifted</th>\n      <th>Canada_Ratio_Shifted</th>\n      <th>United Kingdom_Ratio_Shifted</th>\n      <th>France_Ratio_Shifted</th>\n      <th>Australia_Ratio_Shifted</th>\n      <th>Netherlands_Ratio_Shifted</th>\n      <th>Denmark_Ratio_Shifted</th>\n      <th>New Zealand_Ratio_Shifted</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1/27/20</th>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000358</td>\n      <td>0.259259</td>\n      <td>2.032258</td>\n      <td>14.175000</td>\n      <td>0.350000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000</td>\n    </tr>\n    <tr>\n      <th>2/3/20</th>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000180</td>\n      <td>0.148936</td>\n      <td>0.700000</td>\n      <td>8.462687</td>\n      <td>0.067308</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000</td>\n    </tr>\n    <tr>\n      <th>2/10/20</th>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000029</td>\n      <td>0.134615</td>\n      <td>0.488372</td>\n      <td>6.914634</td>\n      <td>0.066667</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000</td>\n    </tr>\n    <tr>\n      <th>2/17/20</th>\n      <td>2.142857</td>\n      <td>0.0</td>\n      <td>0.285714</td>\n      <td>0.000000</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.571429</td>\n      <td>0.000000</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000013</td>\n      <td>0.101449</td>\n      <td>0.035533</td>\n      <td>6.163043</td>\n      <td>0.133333</td>\n      <td>0.000000</td>\n      <td>0.000000</td>\n      <td>0.000</td>\n    </tr>\n    <tr>\n      <th>2/24/20</th>\n      <td>5.000000</td>\n      <td>0.0</td>\n      <td>3.428571</td>\n      <td>0.428571</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.285714</td>\n      <td>0.571429</td>\n      <td>13.857143</td>\n      <td>1.714286</td>\n      <td>...</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>0.000038</td>\n      <td>0.037433</td>\n      <td>0.008495</td>\n      <td>0.558071</td>\n      <td>0.034483</td>\n      <td>0.071429</td>\n      <td>0.233333</td>\n      <td>0.875</td>\n    </tr>\n  </tbody>\n</table>\n<p>5 rows × 588 columns</p>\n</div>"
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Replace inf values with NaN values -> occur if #infection was zero\n",
+    "plotdata.replace([np.inf, -np.inf], 0, inplace=True)\n",
+    "\n",
+    "# Remove columns where all values are NaNs\n",
+    "plotdata = plotdata.dropna(axis=1, how='all')\n",
+    "plotdata.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [],
+   "source": [
+    "if not os.path.isdir('../plots/n_samples_by_infections_weekly_shifted'):\n",
+    "    os.mkdir('../plots/n_samples_by_infections_weekly_shifted')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "sns.set_style('whitegrid')\n",
+    "\n",
+    "# Generate one line plot per country showing #samples/#infections week-wise shifted over time\n",
+    "for country in countries_ts['Country/Region'].unique():\n",
+    "    if country not in country_counts_prepared.columns: continue\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(24, 12))\n",
+    "    plotdata[f'{country}_Ratio_Shifted'].plot()\n",
+    "\n",
+    "    fig.suptitle(f'Weekly Average of Sample Count of {country} - Scaled by Number of Infections from Last Week', fontsize=22)\n",
+    "    plt.xlabel('Start Date of Week', fontsize=18)\n",
+    "    plt.ylabel('Scaled Count', fontsize=18)\n",
+    "    plt.xticks(fontsize=14, rotation=90)\n",
+    "    plt.yticks(fontsize=14)\n",
+    "\n",
+    "    plt.tight_layout()\n",
+    "    fig.savefig(f'../plots/n_samples_by_infections_weekly_shifted/weekly_count_by_last_weeks_infections_{country}.png', dpi=300)\n",
+    "    plt.close()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
